Fix overflow on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,10 @@
     clip-path: 
         polygon(0% 0%, 100% 0%, 0% 100%);
   }
+
+  .clip-rect {
+    clip-path: rect(0, 100%, 100%, 0%);
+  }
 }
 
 @layer components {
